--- a/requirements.lock.macos.txt
+++ b/requirements.lock.macos.txt
@@ -4,10 +4,22 @@
 #
 #    pip-compile --output-file=requirements.lock.macos.txt requirements.in
 #
+altair==6.0.0
+    # via streamlit
+attrs==25.4.0
+    # via
+    #   jsonschema
+    #   referencing
+blinker==1.9.0
+    # via streamlit
+cachetools==6.2.4
+    # via streamlit
 certifi==2025.11.12
     # via requests
 charset-normalizer==3.4.4
     # via requests
+click==8.3.1
+    # via streamlit
 contourpy==1.3.2
     # via matplotlib
 cycler==0.12.1
@@ -22,6 +34,10 @@ fonttools==4.61.1
     # via matplotlib
 fsspec==2025.12.0
     # via torch
+gitdb==4.0.12
+    # via gitpython
+gitpython==3.1.46
+    # via streamlit
 idna==3.11
     # via requests
 imageio==2.37.2
@@ -31,9 +47,16 @@ imageio-ffmpeg==0.6.0
     #   -r requirements.in
     #   moviepy
 jinja2==3.1.6
-    # via torch
+    # via
+    #   altair
+    #   pydeck
+    #   torch
 joblib==1.5.3
     # via scikit-learn
+jsonschema==4.26.0
+    # via altair
+jsonschema-specifications==2025.9.1
+    # via jsonschema
 kiwisolver==1.4.9
     # via matplotlib
 markupsafe==3.0.3
@@ -44,6 +67,8 @@ moviepy==1.0.3
     # via -r requirements.in
 mpmath==1.3.0
     # via sympy
+narwhals==2.15.0
+    # via altair
 networkx==3.4.2
     # via torch
 numpy==2.2.6
@@ -55,22 +80,36 @@ numpy==2.2.6
     #   moviepy
     #   opencv-python
     #   pandas
+    #   pydeck
     #   scikit-learn
     #   scipy
+    #   streamlit
     #   torchvision
 opencv-python==4.12.0.88
     # via -r requirements.in
 packaging==25.0
-    # via matplotlib
+    # via
+    #   altair
+    #   matplotlib
+    #   streamlit
 pandas==2.3.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   streamlit
 pillow==12.0.0
     # via
     #   imageio
     #   matplotlib
+    #   streamlit
     #   torchvision
 proglog==0.1.12
     # via moviepy
+protobuf==6.33.2
+    # via streamlit
+pyarrow==22.0.0
+    # via streamlit
+pydeck==0.9.1
+    # via streamlit
 pyparsing==3.3.1
     # via matplotlib
 python-dateutil==2.9.0.post0
@@ -81,20 +120,37 @@ python-dotenv==1.2.1
     # via -r requirements.in
 pytz==2025.2
     # via pandas
+referencing==0.37.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 requests==2.32.5
     # via
     #   -r requirements.in
     #   moviepy
+    #   streamlit
+rpds-py==0.30.0
+    # via
+    #   jsonschema
+    #   referencing
 scikit-learn==1.7.2
     # via -r requirements.in
 scipy==1.15.3
     # via scikit-learn
 six==1.17.0
     # via python-dateutil
+smmap==5.0.2
+    # via gitdb
+streamlit==1.52.2
+    # via -r requirements.in
 sympy==1.14.0
     # via torch
+tenacity==9.1.2
+    # via streamlit
 threadpoolctl==3.6.0
     # via scikit-learn
+toml==0.10.2
+    # via streamlit
 torch==2.9.1
     # via
     #   -r requirements.in
@@ -104,13 +160,19 @@ torchaudio==2.9.1
     # via -r requirements.in
 torchvision==0.24.1
     # via -r requirements.in
+tornado==6.5.4
+    # via streamlit
 tqdm==4.67.1
     # via
     #   -r requirements.in
     #   moviepy
     #   proglog
 typing-extensions==4.15.0
-    # via torch
+    # via
+    #   altair
+    #   referencing
+    #   streamlit
+    #   torch
 tzdata==2025.3
     # via pandas
 urllib3==2.6.2
